# speech-to-text

./: .gitignore  README.en.md  README.md  index.html  install.bat  install.sh  main.py  package-lock.json  package.json  requirements.txt  tsconfig.json  whisper_desktop_app_plan.md  whisper_desktop_app_plan_review_issues.md  whisper_desktop_app_ui_refactor_plan.md
.github/workflows/: build.yml
controller/: __init__.py  gui_controller.py  whisper_engine.py
resources/: README.md
scripts/: build-tauri.mjs  cleanup-macos-dmg-mounts.sh  configure-tauri.mjs  package-macos-app.sh  prepare-windows-ffmpeg.mjs  prepare-windows-ffmpeg.ps1  verify-macos-binary-deps.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: audio.rs  export.rs  main.rs  media_fetch.rs  model.rs  transcribe.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: MainView.vue
